<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abhidip.strays.riseupsrays.SignUpActivity">

        <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

        <!--<LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context="com.abhidip.strays.riseupsrays.SignUpActivity">-->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/signUp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp"
                android:textStyle="bold" />


            <ViewFlipper
                android:id="@+id/view_flipper"
                android:layout_width="fill_parent"
                android:layout_height="350dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/fullName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/fullName"
                        android:inputType="textCapWords"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="@color/white_greyish" />

                    <EditText
                        android:id="@+id/userEmailId"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <!--<LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="@color/white_greyish" />

                    <EditText
                        android:id="@+id/location"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/location"
                        android:inputType="textCapWords"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />
                 </LinearLayout>-->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">


                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="@color/white_greyish" />

                    <EditText
                        android:id="@+id/aadhar"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:maxLength="16"
                        android:background="@android:color/transparent"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/aadhar"
                        android:inputType="textCapWords"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="@color/white_greyish" />

                    <EditText
                        android:id="@+id/mobileNumber"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/mobileNumber"
                        android:maxLength="10"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="@color/white_greyish" />

                    <TextView
                        android:id="@+id/statusText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/otp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/otp"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/verifyOtp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:padding="3dp"
                        android:text="@string/verifyOtp"
                        android:textColor="@color/colorPrimary"
                        android:onClick="vefifyCode"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/resendOtp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:padding="3dp"
                        android:text="@string/resendOtp"
                        android:onClick="resendCode"
                        android:textColor="@color/colorPrimary"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="@color/white_greyish" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/passowrd"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="@color/white_greyish" />

                    <EditText
                        android:id="@+id/confirmPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/confirmPassword"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />

                    <CheckBox
                        android:id="@+id/terms_conditions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/terms_conditions"
                        android:textColor="@color/black"
                        android:textSize="14sp" />


                    <!-- <Button
                         android:id="@+id/signUpBtn"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
                         android:padding="3dp"
                         android:text="@string/signUp"
                         android:textColor="@color/colorPrimary"
                         android:textSize="17sp"
                         android:textStyle="bold" />-->

                </LinearLayout>
            </ViewFlipper>


    <Button
        android:id="@+id/nextButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
        android:padding="3dp"
        android:text="Next"
        android:textSize="17sp"
        android:textStyle="bold" />


    <!--<TextView
        android:id="@+id/already_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/already_user"
        android:textColor="@color/white_greyish"
        android:textSize="15sp" />-->


      <!--  </LinearLayout>-->


</LinearLayout>
